# CCTutorial

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
cctutorial/: README.md  db.sqlite3  manage.py
cctutorial/cctutorial/: asgi.py  settings.py  urls.py  views.py  wsgi.py
cctutorial/cctutorial/templates/cctutorial/: home.html
cctutorial/polls/: admin.py  tests.py  urls.py  views.py
cctutorial/polls/management/commands/: create_questions_and_choices.py  fix_output_bug.py
cctutorial/polls/migrations/: 0001_initial.py  0002_alter_question_pub_date.py
cctutorial/polls/templates/: choices.html  questions.html
cctutorial/polls/templates/polls/: base.html  choices.html  index.html  most-popular-choice.html  questions.html
